tests/semantic/valid/function_and_variable_declaration_definition.c
/*
 * Multi-line comment.
 */

#include <stdio.h>

void foo(int8_t a0, int8_t b0, int8_t c0);

int32_t main(int32_t, char c) {
    int32_t a, b = 0;
    char c = '!';
    return 0;
}

void foo(int8_t a1, int8_t b1, int8_t c1)
{
    char a0, a1;
}
